# DES-SN-DR

./: .gitignore  README.md  pyproject.toml  setup.py
dessndr/: data.py  plot.py  utils.py
dessndr/scripts/: download_dessndr.py
docs/: 0_DATA.rst  3_CLASSIFICATION.rst  4_DISTANCES_COVMAT.rst  5_COSMOLOGY.rst  6_DCR_CORRECTIONS.rst  7_PIPPIN_FILES.rst  Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_static/: links.rst
docs/tutorial/: 01-load_data.ipynb  02-load_lcplot.ipynb  03-Classification.ipynb  04-HubbleDiagram.ipynb  05-LambdaDependentCorrections.ipynb  06-Cosmology-DESSN5YR_Flat_wCDM.ipynb
